--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -75,6 +75,10 @@ label {
   border: none;
 }
 
+.link:hover {
+  text-decoration: underline;
+}
+
 .proceed-to-checkout {
   margin: 0;
   text-align: center;
