--- a/views/summary.ejs
+++ b/views/summary.ejs
@@ -25,26 +25,29 @@
     });
   });
 </script>
-<div class="container-fluid">
-
-  <body>
-    <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-      <h1 class="pricing-header display-4">Checkout Summary</h1>
-      <p class=>Your total delivery cost will be
-        <strong>$<%= selectedPrice %></strong>
-      <p class=>Vehicle <strong><%= vehicle %></strong></p>
-      <p class=>From <strong><%= from %></strong></p>
-      <p class=>To <strong><%= to %></strong></p>
-      <p class=>Service <strong><%= service %></strong></p>
-    </div>
-    <div class="container">
-      <div class="proceed-to-checkout">
-        <button class="btn btn-primary btn-lg btn-block" class="proceed-to-checkout-button btn btn-lg"
-          id="checkout-button">
-          Book Now
-        </button>
+<div class="container checkout-summary">
+  <div class="card-deck mb-3 text-center">
+    <div class="card mb-4 shadow-sm">
+      <div class="card-header">
+        <h4 class="my-0 font-weight-normal">Checkout Summary</h4>
+      </div>
+      <div class="card-body">
+        <h1 class="card-title pricing-card-title">Your total delivery cost will be
+          <strong>$<%= selectedPrice %></strong></h1>
+          <ul class="list-unstyled mt-3 mb-4">
+            <li class=>Vehicle <strong><%= vehicle %></strong></li>
+            <li class=>From <strong><%= from %></strong></li>
+            <li class=>To <strong><%= to %></strong></li>
+            <li class=>Service <strong><%= service %></strong></li>
+          </ul>   
+          <div class="proceed-to-checkout">
+            <button class="btn btn-primary btn-lg proceed-to-checkout-button"
+              id="checkout-button">
+              Book Now
+            </button> 
+          </div>
       </div>
     </div>
-  </body>
+  </div>
 </div>
 <%- include("footer") -%>
