--- a/views/quote.ejs
+++ b/views/quote.ejs
@@ -107,6 +107,7 @@
             type="button"
             class="btn btn-lg btn-block btn-primary"
             id="selectEnclosed"
+            style="color: white; background-color: #00538b;"
           >
             Select Enclosed Trailer
           </button>
