--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,6 @@
-<footer class="container">
-    <div class="footer-bar">
-        <p>An ISO 9001 Company. &copy Copyright Select 1 Group <script type="text/javascript">var year = new Date();document.write(year.getFullYear());</script>.</p>
+<footer class="footer mt-auto py-3">
+    <div class="container">
+        <span class="text-muted">An ISO 9001 Company. &copy Copyright Select 1 Group <script type="text/javascript">var year = new Date();document.write(year.getFullYear());</script>.</span>
     </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
